# shared-memory-example

./: CMakeLists.txt  README.md  enable_hugepages.sh  install_deps.sh  run_consumer.sh  run_producer.sh
docs/: overview.md
include/: common.hpp
source/: cleanup.cpp  consumer.cpp  producer.cpp
